# world-game-smartphone

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
.vercel-tmp/: vercel-install.cjs  vercel-login.cjs
config/: companies.yaml  game.yaml  industry.yaml  models.yaml  phones.yaml  prompts.yaml  regional_markets.yaml  tech_catalog.yaml
data/: mobile_industry_intelligence.opml  手机全产业模拟经营游戏配套专业研究报告.html  手机全产业模拟经营游戏配套专业研究报告.md
data/events/: brand_marketing_events.json  market_events.json  market_regional_events.json  policy_events.json  software_events.json  supply_events.json  supply_risk_events.json  tech_events.json
data/knowledge_graph/: brands.json  people.json  suppliers.json  technologies.json
engine/: __init__.py  agent.py  consumer.py  effects.py  loader.py  market.py  models.py  rules.py  test_agent.py  test_tick.py  world.py
frontend/: package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: PhoneStore.tsx
src/: __init__.py  dependencies.py  main.py
src/api/: __init__.py  board.py  engine_api.py  game.py  intel.py  okr.py  phones.py  router.py  rss.py  rss_intel.py  simulation.py  social.py  tech_roadmap.py  world.py
src/db/: session.py
src/engines/: agent.py  claim_debate.py  event_generator.py  knowledge_graph.py  rss_intel.py  simulation.py  state_machine.py  tech_roadmap.py
src/llm/: client.py  providers.py  structured.py
src/models/: base.py  board.py  game.py  intel.py  okr.py  simulation.py  world.py
world-model/: loader_test.py
(+43 files in other folders)
